@startuml

package BotTrade
{
    package Domain
    {
        package Strategies
        {
            enum StrategyKind
            abstract Strategy
            class CustomStrategy
        }
        package Settings
        {
            class Setting <<record>>
            class APISetting <<record>>
            class BotSetting <<record>>
            class ExchangeSetting <<record>>
            class StrategySetting <<record>>
        }
        enum Symbol
        enum Timeframe
        class Bot
        class Candle
        class Position
        abstract Exchange
        interface ICandleRepository
        interface IUpdatableCandleRepository
        interface ITradeLogger
    }
    package Application
    {
        class BacktestService
    }
    package Infra
    {
        class BotFactory
        class PastCandleRepository
        class TradeHistoryGraphPrinter

        package Exchanges
        {
            class BacktestExchange
            class RealExchnage
        }
    }
}

Exchange <|-- BacktestExchange
Exchange <|-- RealExchnage
ICandleRepository <|-- IUpdatableCandleRepository

Strategy <|.. CustomStrategy
ITradeLogger <|.. TradeHistoryGraphPrinter
IUpdatableCandleRepository <|.. PastCandleRepository

Bot <.. BotFactory : DI resolve and create
BotSetting <.. BotFactory : read
APISetting <.. BotFactory : read
Strategy <.. Bot
ITradeLogger <.. Bot 
Exchange <.. Bot : order and fetch candle
Candle <.. ICandleRepository : fetch and store
Position <.. Exchange : make and close

Setting "1" o-- "*" APISetting 
Setting "1" o-- "*" BotSetting
BotSetting "1" o-- "1" ExchangeSetting
BotSetting "1" o-- "*" StrategySetting

@enduml